--- a/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
+++ b/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
@@ -13,6 +13,7 @@ tags:
 
 library(gmodels)
 library(tidyverse)
+library(rpart ) # for decision tree
 
 loan_data <- readRDS("loan_data_ch1.rds")
 model_pred <- read.csv("model_pred.csv")
@@ -153,8 +154,6 @@ loan_data$ir_cat[which(is.na(loan_data$int_rate))] <- "Missing"
 loan_data$ir_cat <- as.factor(loan_data$ir_cat)
 
 # Look at your new variable using plot()
-plot(loan_data$ir_cat)
-
 loan_data %>% ggplot(aes(ir_cat))+ geom_bar(fill="grey", color="black", width = 0.8)+theme_minimal()
 ```
 
