--- a/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
+++ b/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
@@ -13,10 +13,12 @@ tags:
 
 library(gmodels)
 library(tidyverse)
-library(rpart ) # for decision tree
+library(rpart )        # for decision tree
+library(rpart.plot)    # for plotting decision tree
 
 loan_data <- readRDS("loan_data_ch1.rds")
 model_pred <- read.csv("model_pred.csv")
+undersampled_training_set <- read.csv("undersampled_training_set.csv")
 bb <- readRDS("loan_data_ch2.rds")
 ```
 
@@ -455,6 +457,75 @@ In the video, you have learned that pruning a tree is necessary to avoid overfit
 You will first set a seed to make sure the results are reproducible as mentioned in the video, because you will be examining cross-validated error results. Results involve randomness and could differ slightly upon running the function again with a different seed.
 
 In this exercise you will learn to identify which complexity parameter (CP) will minimize the cross-validated error results, then prune your tree based on this value.
+
+```{r}
+# tree_prior is loaded in your workspace
+
+# Plot the cross-validated error rate as a function of the complexity parameter
+plotcp(tree_prior)
+
+# Use printcp() to identify for which complexity parameter the cross-validated error rate is minimized.
+printcp(tree_prior)
+
+# Create an index for of the row with the minimum xerror
+index <- which.min(tree_prior$cptable[ , "xerror"])
+
+# Create tree_min
+tree_min <- tree_prior$cptable[index, "CP"]
+
+#  Prune the tree using tree_min
+ptree_prior <- prune(tree_prior, cp = tree_min)
+
+# Use prp() to plot the pruned tree
+prp(ptree_prior)
+```
+
+## 3-10 Pruning the tree with the loss matrix
+
+In this exercise, you will prune the tree that was built using a loss matrix in order to penalize misclassified defaults more than misclassified non-defaults.
+
+Looking at the cp-plot, you will notice that pruning the tree using the minimum cross-validated error will lead to a tree that is as big as the unpruned tree, as the cross-validated error reaches its minimum for cp = 0.001. Because you would like to make the tree somewhat smaller, try pruning the tree using cp = 0.0012788. For this complexity parameter, the cross-validated error approaches the minimum observed error. Call the pruned tree ptree_loss_matrix.
+
+```{r}
+# set a seed and run the code to construct the tree with the loss matrix again
+set.seed(345)
+tree_loss_matrix  <- rpart(loan_status ~ ., method = "class", data = training_set,
+                           parms = list(loss=matrix(c(0, 10, 1, 0), ncol = 2)),
+                           control = rpart.control(cp = 0.001))
+
+# Plot the cross-validated error rate as a function of the complexity parameter
+plotcp(tree_loss_matrix) 
+
+# Prune the tree using cp = 0.0012788
+ptree_loss_matrix <- prune(tree_loss_matrix, cp = 0.0012788)
+
+# Use prp() and argument extra = 1 to plot the pruned tree
+prp(ptree_loss_matrix, extra = 1)
+```
+
+## 3-12 One final tree using more options
+In this exercise, you will use some final arguments that were discussed in the video. Some specifications in the rpart.control()-function will be changed, and some weights will be included using the weights argument in rpart(). The vector case_weights has been constructed for you and is loaded in your workspace. This vector contains weights of 1 for the non-defaults in the training set, and weights of 3 for defaults in the training sets. By specifying higher weights for default, the model will assign higher importance to classifying defaults correctly.
+
+```{r}
+
+```
+
+## 3-12 Confusion matrices and accuracy of our final trees
+
+Over the past few exercises, you have constructed quite a few pruned decision trees, with four in total. As you can see, the eventual number of splits varies quite a bit from one tree to another:
+
+ptree_undersample  # 7 splits
+ptree_prior  # 9 splits
+ptree_loss_matrix  # 24 splits
+ptree_weights  # 6 splits
+
+Now it is important to know which tree performs best in terms of accuracy. In order to get the accuracy, you will start off by making predictions using the test set, and construct the confusion matrix for each of these trees. You will add the argument type = "class" when doing these predictions. By doing this there is no need to set a cut-off.
+
+Nevertheless, it is important to be aware of the fact that not only the accuracy is important, but also the sensitivity and specificity. Additionally, predicting probabilities instead of binary values (0 or 1) has the advantage that the cut-off can be moved along. Then again, the difficulty here is the choice of the cut-off. You will return to this in the next chapter.
+
+In case you needed a reminder, here is how to compute the accuracy:
+
+Classification accuracy= (TP+TN)/(TP+FP+TN+FN)
 
 ```{r}
 
