--- a/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
+++ b/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
@@ -19,6 +19,8 @@ library(rpart.plot)    # for plotting decision tree
 loan_data <- readRDS("loan_data_ch1.rds")
 model_pred <- read.csv("model_pred.csv")
 undersampled_training_set <- read.csv("undersampled_training_set.csv")
+case_weights <- read.csv("case_weights.csv")
+
 bb <- readRDS("loan_data_ch2.rds")
 ```
 
@@ -507,7 +509,26 @@ prp(ptree_loss_matrix, extra = 1)
 In this exercise, you will use some final arguments that were discussed in the video. Some specifications in the rpart.control()-function will be changed, and some weights will be included using the weights argument in rpart(). The vector case_weights has been constructed for you and is loaded in your workspace. This vector contains weights of 1 for the non-defaults in the training set, and weights of 3 for defaults in the training sets. By specifying higher weights for default, the model will assign higher importance to classifying defaults correctly.
 
 ```{r}
+# set a seed and run the code to obtain a tree using weights, minsplit and minbucket
+set.seed(345)
+tree_weights <- rpart(loan_status ~ ., method = "class", weights=case_weights$x, 
+                      data = training_set,
+                      control = rpart.control(minsplit = 5, minbucket = 2, cp = 0.001))
 
+# Plot the cross-validated error rate for a changing cp
+plotcp(tree_weights)
+
+# Create an index for of the row with the minimum xerror
+index <- which.min(tree_weights$cp[ , "xerror"])
+
+# Create tree_min
+tree_min <- tree_weights$cp[index, "CP"]
+
+# Prune the tree using tree_min
+ptree_weights <- prune(tree_weights, cp = tree_min)
+
+# Plot the pruned tree using the rpart.plot()-package
+prp(ptree_weights, extra = 1)
 ```
 
 ## 3-12 Confusion matrices and accuracy of our final trees
@@ -528,6 +549,22 @@ In case you needed a reminder, here is how to compute the accuracy:
 Classification accuracy= (TP+TN)/(TP+FP+TN+FN)
 
 ```{r}
+# Make predictions for each of the pruned trees using the test set.
+pred_undersample <- predict(ptree_undersample, newdata = test_set,  type = "class")
+pred_prior <- predict(ptree_prior, newdata = test_set, type = "class")
+pred_loss_matrix <- predict(ptree_loss_matrix, newdata = test_set, type = "class")
+pred_weights <- predict(ptree_weights, newdata = test_set, type = "class")
 
+# Construct confusion matrices using the predictions.
+confmat_undersample <- table(test_set$loan_status, pred_undersample)
+confmat_prior <- table(test_set$loan_status, pred_prior)
+confmat_loss_matrix <- table(test_set$loan_status, pred_loss_matrix)
+confmat_weights <- table(test_set$loan_status, pred_weights)
+
+# Compute the accuracies
+acc_undersample <- sum(diag(confmat_undersample)) / nrow(test_set)
+acc_prior <- sum(diag(confmat_prior)) / nrow(test_set)
+acc_loss_matrix <- sum(diag(confmat_loss_matrix)) / nrow(test_set)
+acc_weights <- sum(diag(confmat_weights)) / nrow(test_set)
 ```
 
