--- a/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
+++ b/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
@@ -306,13 +306,13 @@ In the first argument, you are testing whether a certain value in the prediction
 # The code for the logistic regression model and the predictions is given below
 log_model_full <- glm(loan_status ~ ., family = "binomial", data = training_set)
 
-#predictions_all_full <- predict(log_model_full, newdata = test_set, type = "response")
+predictions_all_full <- predict(log_model_full, newdata = test_set, type = "response")
 
 # Make a binary predictions-vector using a cut-off of 15%
-#pred_cutoff_15 <- ifelse(predictions_all_full>0.15, 1, 0)
+pred_cutoff_15 <- ifelse(predictions_all_full>0.15, 1, 0)
 
 # Construct a confusion matrix
-#table(test_set$loan_status, pred_cutoff_15)
+table(test_set$loan_status, pred_cutoff_15)
 ```
 
 ## 2-13 Comparing link functions for a given cut-off
