--- a/content/post/2021-09-27-visualizing-big-data-with-trelliscope-in-r/index.en.Rmd
+++ b/content/post/2021-09-27-visualizing-big-data-with-trelliscope-in-r/index.en.Rmd
@@ -54,35 +54,256 @@ ggplot(daily_count, aes(pickup_date, n_rides)) +
 
 Let's learn about how much cab rides cost in NYC and look at a histogram of the total cab fare. Since the fare amount is likely to be highly skewed, we will plot it with the x-axis in the log scale.
 
+```{r warning=FALSE}
+# Create a histogram of total_amount
+ggplot(tx, aes(total_amount)) +
+  geom_histogram(bins = 30) +
+  scale_x_log10()
+```
+
+## 1-4 Distribution of payment type
+
+An interesting categorical variable in the data having to do with payments is the payment type. This has four possible values: *Card*, *Cash*, *Disputed*, and *Unknown.* A bar chart of the frequency of each of these values can help us understand the prevalence of different payment methods.
+
+```{r}
+# Create a bar chart of payment_type
+ggplot(tx, aes(payment_type)) +
+  geom_bar()
+```
+
+## 1-6 Relationship between trip duration and total fare
+
+We would assume that there is a relationship between the total cab fare and the duration of the trip. Since there are too many data points to make a scatterplot, let's use a hexagon-binned plot to investigate this relationship.
+
 ```{r}
 
 ```
 
-## 1-4 
+## 1-7 Faceting daily rides
+
+We noticed some interesting behavior when we looked at daily ride counts faceted by day-of-week. Let's investigate whether faceting on additional variables yields any new insights. Here we will see if there are different day-of-week patterns when also looking at the payment types of cash or credit card.
 
 ```{r}
 
 ```
 
-## 1-6 
+## 1-8 Tip amount distribution faceted by payment type
+
+The distribution of the total cab fare plot we created earlier was interesting, but we might be able to gain additional insight into this distribution by investigating whether it varies with respect to another variable. In this exercise, we'll look at the tip amount portion of the cab fare distribution and see if it is different for different payment types by creating a histogram and faceting on payment type.
 
 ```{r}
 
 ```
 
-## 1-7 
+## 1-10 Comparing fare distribution by payment type
+
+We have seen that there is no tip for cash payments. Does this mean people who pay with cash don't tip, or does it mean that tips aren't recorded when people pay with cash? For similar routes, we would expect the distributions of total fare to be identical regardless of payment type. In this exercise, we will create a quantile plot comparing the distribution of total fare by payment type and compare that with the original plot in a different facet.
+
+A dataset amount_compare has been created for you that contains variables payment_type, amount, and amount_type. amount_type distinguishes between values that reflect a total payment vs. a payment with no tip.
 
 ```{r}
 
 ```
 
-## 1-8 
+## 2. ggplot2 + TrelliscopeJS
+
+In the previous chapter you saw how faceting can b used as a powerful technique for visualizing a lot of data that can be naturally partitioned in some meaningful way. Now, using the trelliscopejs package with ggplot2, you will learn how to create faceted visualizations when the number of partitions in the data becomes too large to effectively view in a single screen.
+
+## 2-2 Trelliscope faceting gapminder by country
+
+With a subset of the gapminder data (just the two countries in Oceania), take the example of life expectancy vs. year faceted by country and continent and create a TrelliscopeJS display.
 
 ```{r}
 
 ```
 
-## 1-10 
+## 2-4 Interacting with the display
+
+Investigate the output of the life expectancy by country plot and answer the following question: Which Asian country has the lowest average life expectancy?
+
+```{r}
+
+```
+
+## 2-6 Customizing the gapminder display
+
+Let's put some of these features to the test with our by-country life expectancy trajectory plot. Note that we are again working with just the two countries from Oceania.
+
+```{r}
+
+```
+
+## 2-7 Examining the new cognostics
+
+Investigate the output of the plot you just created (now with all countries and with as_plotly = TRUE) and interact with the cognostics to answer the question: Which country has the poorest linear model fit according to the fraction of variance explained by the model? Note that this quantity is known as "R-squared", and that cognostics associated with the linear model fit begin with _lm.
+
+```{r}
+
+```
+
+## 2-9 Adding custom cognostics
+
+Let's create some custom cognostics. To do so, you'll add two new variables to the gapminder data: delta_lifeExp and ihme_link.
+
+```{r}
+
+```
+
+## 2-10 Interpreting custom cognostics
+
+Which continent has seen the highest number of its countries increase their life expectancy by over 30 years?
+
+```{r}
+
+```
+
+## 3. Trelliscope in the Tidyverse
+
+The ggplot2 + trelliscopejs interface is easy to use, but trelliscopejs also provides a faceted plotting mechanism that gives you much more flexibility in what plotting system you use and how to specify cognostics. You will learn all about that in this chapter!
+
+## 3-2 Grouping and nesting
+
+Let's practice nesting data frames, getting familiar with the output, and computing on nested data frames.
+
+```{r}
+
+```
+
+## 3-3 Stock price display
+
+Now that we have a data frame nested by stock symbol, let's make a Trelliscope display with a plot for each stock. In this exercise, we use just the first 10 stocks in the by_symbol dataset we created in the previous exercise and create an "open-high-low-close" plot, a plot similar to candlestick plots. The available by_symbol dataset available in your session has already been subsetted to the first 10 stocks.
+
+```{r}
+
+```
+
+## 3-4 Exploring the display
+
+We can now navigate the display to look at the plots for each of the stocks. Explore the display to see what you can learn in general about the data. After you have satisfied your curiosity, use your display navigation skills to answer the following question: What was the highest high price that Nvidia Corporation (symbol: NVDA) reached in 2016?
+
+```{r}
+
+```
+
+## 3-6 Adding cognostics
+
+Let's practice custom cognostics by taking the by_symbol data merged with the stock metadata creating a cognostic for the log market capitalization.
+
+```{r}
+
+```
+
+## 3-7 Cognostics from nested data frames
+
+Let's compute the average close price, average volume, and annual return as cognostics. The variables that these are based on, open, close, and volume, are inside the nested data frame data in our by_symbol dataset.
+
+Note that a function, annual_return(), has been provided for convenience.
+
+```{r}
+
+```
+
+## 3-8 Navigating stock plots with new cognostics
+
+The cognostics we've added in the previous two exercises can add a lot of meaningful interactions to the display. Given a display created with these cognostics, looking at stocks with more than 10 billion market capitalization (1e10), which stock in the technology sector had the worst annual return?
+
+```{r}
+
+```
+
+## 3-10 Customizing the stock display
+
+Let's customize our stock display by specifying a wider plot having an aspect ratio of 2, and let's give it a custom description.
+
+Note that the data frame by_symbol has already been computed and contains the panel column and all the cognostics that we desire for our display.
+
+```{r}
+
+```
+
+## 3-12 Visualizing Pokemon
+
+Let's try visualizing the pokemon data. There are a lot of variables in the pokemon dataset, so let's only select a few that we really want to use as cognostics.
+
+```{r}
+
+```
+
+## 3-13 The most powerful Pokemon
+
+Now that we have our display, can you answer who is the most powerful (with respect to attack) 1st-generation (generation_id) Pokemon of type (type_1) "fire"?
+
+```{r}
+
+```
+
+## 4. Case Study: Exploring Montreal BIXI Bike Data
+
+The Montreal BIXI bike network provides open data for every bike ride, including the date, time, duration, and start and end stations of the ride. In this chapter, you will analyze data from over 4 million bike rides in 2017, going between 546 stations. There are many interesting exploratory questions to ask from this data and you will create exploratory visualizations ranging from summary statistics to detailed Trelliscope visualizations that will give you interesting insight into the data.
+
+## 4-2 Number of daily rides
+
+Make a summary plot of the number of daily rides with workweek / weekend days colored differently.
+
+```{r}
+
+```
+
+## 4-3 Examining time-of-day
+
+Now let's look at how rides are distributed according to the time of day. Let's make a summary plot of weekly ride counts faceted by start hour of day and broken down by workweek/weekend.
+
+```{r}
+
+```
+
+## 4-4 Effect of membership and weekday
+
+Expanding on the previous plot, let's add one more variable into our summary, adding a facet dimension for whether or not the rider is a member of BIXI.
+
+```{r}
+
+```
+
+## 4-6 Daily plots
+
+Let's now look at the number of rides vs. hour for each day. To start, we'll create a summary dataset for the first full month in the dataset (May) and look at it.
+
+```{r}
+
+```
+
+## 4-7 Looking at all days
+
+Let's view the previous visualization as a Trelliscope display, building on the daily_may dataset we created in the previous exercise, available in your session. This will allow us to later swap out the "May-only" data summary to look at all 215 days without being constrained for visual space.
+
+```{r}
+
+```
+
+## 4-9 Augmenting the data: Route summary statistics
+
+We have constructed a dataset that is nearly ready for visualization, route_hod. Let's add in a few more variables that will be useful as cognostics as we anticipate interactively viewing the display.
+
+```{r}
+
+```
+
+## 4-10 Visualizing the data: Counts by hour-of-day
+
+We can now create a Trelliscope display using ggplot2. We want to plot number of rides vs. hour of day, colored by workweek / weekend, and faceted by route using facet_trelliscope().
+
+route_hod is available in your workspace, but it only contains the top 8 routes. We will view the result for all top routes in the final exercise.
+
+```{r}
+
+```
+
+## 4-11 Evaluating the visualization
+
+There are interesting and varying patterns of ride counts for different routes. Try experimenting with sorting and filtering by different metrics. Which are the most common start and end stations? Are some stations more associated with leisure vs. commuter rides? Are commuter routes generally longer or shorter in distance / duration?
+
+Now answer the following question: What route with average trip duration less than 10 minutes has the most total rides?
 
 ```{r}
 
