--- a/content/post/2021-09-27-visualizing-big-data-with-trelliscope-in-r/index.en.Rmd
+++ b/content/post/2021-09-27-visualizing-big-data-with-trelliscope-in-r/index.en.Rmd
@@ -164,6 +164,19 @@ ggplot(gapminder, aes(year, lifeExp)) +
   facet_trelliscope(~ country+continent)
 ```
 
+Set the initial layout to show 1 row and 2 columns.
+Note: Trelliscope displays are best viewed by expanding the HTML Viewer.
+
+```{r}
+ggplot(gapminder, aes(year, lifeExp)) +
+  geom_line() +
+  facet_trelliscope(~ country + continent,
+    name = "lifeExp_by_country",
+    desc = "Life expectancy vs. year per country",
+    nrow = 1, ncol = 2
+  )
+```
+
 ## 2-4 Interacting with the display
 
 Investigate the output of the life expectancy by country plot and answer the following question: Which Asian country has the lowest average life expectancy?
